<resources>
    <string name="app_name">MaterialNavigationDrawer</string>
    <string name="action_settings">My Maker is Jarvis</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="cricinfo_string">CricInfo</string>
    <string name="google_string">Google</string>
    <string name="butterknife_string">Butterknife Fragment</string>
    <string name="footerItem_string">Material Design - Google</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>