<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:checked="true"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/inbox_string" />

        <item
            android:id="@+id/starred"
            android:checked="false"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_star_black"
            android:title="@string/starred_string" />

        <item
            android:id="@+id/sent_mail"
            android:checked="false"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_send_black"
            android:title="@string/sent_mail_string" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/draft_string" />


        <item
            android:id="@+id/google"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/google_string" />
        <item
            android:id="@+id/cricinfo"
            android:checked="false"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/cricinfo_string" />
        <item
            android:id="@+id/butterknife"
            android:checked="false"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_error_black"
            android:title="@string/butterknife_string" />

        <item
            android:id="@+id/footerItem"
            android:checked="false"
            android:fontFamily="san-serif"
            android:icon="@drawable/ic_error_black"
            android:title="@string/footerItem_string" />
    </group>
</menu>